# ChangeLog for x11-wm/xmonad-contrib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/xmonad-contrib/ChangeLog,v 1.6 2009/10/26 23:06:15 kolmodin Exp $

*xmonad-contrib-0.9 (26 Oct 2009)

  26 Oct 2009; <kolmodin@gentoo.org> +xmonad-contrib-0.9.ebuild:
  Version bump

*xmonad-contrib-0.8.1 (31 Jul 2009)

  31 Jul 2009; Lennart Kolmodin <kolmodin@gentoo.org>
  +xmonad-contrib-0.8.1.ebuild:
  Version bump.

*xmonad-contrib-0.8 (06 Sep 2008)

  06 Sep 2008; Lennart Kolmodin <kolmodin@gentoo.org>
  +xmonad-contrib-0.8.ebuild:
  Bump package to match xmonad-0.8

*xmonad-contrib-0.7 (11 Apr 2008)

  11 Apr 2008; Lennart Kolmodin <kolmodin@gentoo.org>
  +xmonad-contrib-0.7.ebuild:
  Version bump.

*xmonad-contrib-0.6 (02 Feb 2008)

  02 Feb 2008; Lennart Kolmodin <kolmodin@gentoo.org>
  +xmonad-contrib-0.6.ebuild:
  Version bump, xft still disabled

*xmonad-contrib-0.5 (16 Dec 2007)

  16 Dec 2007; Lennart Kolmodin <kolmodin@gentoo.org> +metadata.xml,
  +xmonad-contrib-0.5.ebuild:
  Initial import. xmonad-contrib is a library of extensions to x11-wm/xmonad.
