@@ -1,6 +1,9 @@
 # ChangeLog for x11-wm/xmonad-contrib
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/xmonad-contrib/ChangeLog,v 1.6 2009/10/26 23:06:15 kolmodin Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/xmonad-contrib/ChangeLog,v 1.7 2009/10/27 08:01:05 kolmodin Exp $
+
+  27 Oct 2009; <kolmodin@gentoo.org> xmonad-contrib-0.9.ebuild:
+  Add utf8-string as a mandatory dep
 
 *xmonad-contrib-0.9 (26 Oct 2009)
 
